add_executable (test_orla_data_structures test.cpp)

target_link_libraries (test_orla_data_structures orla_vector)
target_link_libraries (test_orla_data_structures orla_doubly_linked_list)
target_link_libraries (test_orla_data_structures orla_singly_linked_list)

target_compile_options(test_orla_data_structures PRIVATE -Werror -Wall -Wextra)